// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPageModels > crop marks never cross another tile’s trim+bleed box (snapshot of a tight 2-up) 1`] = `
{
  "cropMarks": [
    {
      "x1": 10,
      "x2": 6,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 14,
      "x2": 14,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 102,
      "x2": 102,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 102,
      "x2": 102,
      "y1": 78,
      "y2": 82,
    },
    {
      "x1": 10,
      "x2": 6,
      "y1": 74,
      "y2": 74,
    },
    {
      "x1": 14,
      "x2": 14,
      "y1": 78,
      "y2": 82,
    },
    {
      "x1": 108,
      "x2": 108,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 200,
      "x2": 204,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 196,
      "x2": 196,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 200,
      "x2": 204,
      "y1": 74,
      "y2": 74,
    },
    {
      "x1": 196,
      "x2": 196,
      "y1": 78,
      "y2": 82,
    },
    {
      "x1": 108,
      "x2": 108,
      "y1": 78,
      "y2": 82,
    },
  ],
  "groups": [],
  "index": 0,
  "lines": [],
  "safeArea": {
    "h": 287,
    "w": 200,
    "x": 5,
    "y": 5,
  },
  "size": {
    "h": 297,
    "w": 210,
  },
  "tiles": [
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 60,
        "w": 88,
        "x": 14,
        "y": 14,
      },
      "version": "original",
    },
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "b",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 60,
        "w": 88,
        "x": 108,
        "y": 14,
      },
      "version": "original",
    },
  ],
}
`;

exports[`composition lines in the page model > a 3-version turned group with lines, bleed and crop marks > matches the snapshot (the first tile's lines; tiles and marks are pinned by the M2 snapshot) 1`] = `
{
  "clip": {
    "h": 66,
    "w": 44,
    "x": 13,
    "y": 14,
  },
  "colour": "#1f3fbf",
  "opacity": 0.75,
  "strokes": [
    {
      "cmds": [
        {
          "op": "M",
          "x": 57,
          "y": 36,
        },
        {
          "op": "L",
          "x": 13,
          "y": 36,
        },
        {
          "op": "M",
          "x": 57,
          "y": 58,
        },
        {
          "op": "L",
          "x": 13,
          "y": 58,
        },
        {
          "op": "M",
          "x": 42.333333333333336,
          "y": 14,
        },
        {
          "op": "L",
          "x": 42.333333333333336,
          "y": 80,
        },
        {
          "op": "M",
          "x": 27.666666666666668,
          "y": 14,
        },
        {
          "op": "L",
          "x": 27.666666666666668,
          "y": 80,
        },
        {
          "op": "M",
          "x": 57,
          "y": 14,
        },
        {
          "op": "C",
          "x": 13,
          "x1": 32.699471007445084,
          "x2": 13,
          "y": 54.79024325749305,
          "y1": 14,
          "y2": 32.262413964491294,
        },
        {
          "op": "C",
          "x": 40.193495504995376,
          "x1": 13,
          "x2": 25.1749426429942,
          "y": 80,
          "y1": 68.71320745332366,
          "y2": 80,
        },
        {
          "op": "C",
          "x": 57,
          "x1": 49.475471635549106,
          "x2": 57,
          "y": 64.41951348501388,
          "y1": 80,
          "y2": 73.02437858218505,
        },
        {
          "op": "C",
          "x": 46.61300899000925,
          "x1": 57,
          "x2": 52.34958572145669,
          "y": 54.79024325749305,
          "y1": 59.101414386354435,
          "y2": 54.79024325749305,
        },
        {
          "op": "C",
          "x": 40.193495504995376,
          "x1": 43.06760959090296,
          "x2": 40.193495504995376,
          "y": 60.74145954495835,
          "y1": 54.79024325749305,
          "y2": 57.45469354644664,
        },
        {
          "op": "C",
          "x": 44.160973029972254,
          "x1": 40.193495504995376,
          "x2": 41.969795697631106,
          "y": 64.41951348501388,
          "y1": 62.77279264510609,
          "y2": 64.41951348501388,
        },
        {
          "op": "C",
          "x": 46.61300899000925,
          "x1": 45.51519509673739,
          "x2": 46.61300899000925,
          "y": 62.14635113760412,
          "y1": 64.41951348501388,
          "y2": 63.40178403596809,
        },
        {
          "op": "C",
          "x": 45.097567425069364,
          "x1": 46.61300899000925,
          "x2": 45.93452269064537,
          "y": 60.74145954495835,
          "y1": 61.37045093582037,
          "y2": 60.74145954495835,
        },
        {
          "op": "C",
          "x": 44.160973029972254,
          "x1": 44.580300623880234,
          "x2": 44.160973029972254,
          "y": 61.609730299722344,
          "y1": 60.74145954495835,
          "y2": 61.130197603142115,
        },
        {
          "op": "C",
          "x": 44.73982019981503,
          "x1": 44.160973029972254,
          "x2": 44.42013173542814,
          "y": 62.14635113760412,
          "y1": 61.90609780492587,
          "y2": 62.14635113760412,
        },
        {
          "op": "C",
          "x": 45.097567425069364,
          "x1": 44.93739853661728,
          "x2": 45.097567425069364,
          "y": 61.8147012207219,
          "y1": 62.14635113760412,
          "y2": 61.9978664120986,
        },
        {
          "op": "C",
          "x": 44.876467480480926,
          "x1": 45.097567425069364,
          "x2": 44.99857760806555,
          "y": 61.609730299722344,
          "y1": 61.70149890689507,
          "y2": 61.609730299722344,
        },
      ],
      "dashMm": [],
    },
    {
      "cmds": [
        {
          "op": "M",
          "x": 57,
          "y": 47,
        },
        {
          "op": "L",
          "x": 13,
          "y": 47,
        },
        {
          "op": "M",
          "x": 35,
          "y": 14,
        },
        {
          "op": "L",
          "x": 35,
          "y": 80,
        },
      ],
      "dashMm": [
        3,
        2,
      ],
    },
  ],
  "tileIndex": 0,
  "types": [
    "thirds",
    "spiral",
    "centre",
  ],
  "widthMm": 0.5,
}
`;

exports[`composition lines in the page model > puts the same lines on every version tile of a group, none on a photo without lines (golden) 1`] = `
{
  "cropMarks": [
    {
      "x1": 19,
      "x2": 15,
      "y1": 20,
      "y2": 20,
    },
    {
      "x1": 20,
      "x2": 20,
      "y1": 19,
      "y2": 15,
    },
    {
      "x1": 61,
      "x2": 65,
      "y1": 20,
      "y2": 20,
    },
    {
      "x1": 60,
      "x2": 60,
      "y1": 19,
      "y2": 15,
    },
    {
      "x1": 61,
      "x2": 65,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 60,
      "x2": 60,
      "y1": 81,
      "y2": 85,
    },
    {
      "x1": 19,
      "x2": 15,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 20,
      "x2": 20,
      "y1": 81,
      "y2": 85,
    },
    {
      "x1": 65,
      "x2": 61,
      "y1": 20,
      "y2": 20,
    },
    {
      "x1": 66,
      "x2": 66,
      "y1": 19,
      "y2": 15,
    },
    {
      "x1": 107,
      "x2": 111,
      "y1": 20,
      "y2": 20,
    },
    {
      "x1": 106,
      "x2": 106,
      "y1": 19,
      "y2": 15,
    },
    {
      "x1": 107,
      "x2": 111,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 106,
      "x2": 106,
      "y1": 81,
      "y2": 85,
    },
    {
      "x1": 65,
      "x2": 61,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 66,
      "x2": 66,
      "y1": 81,
      "y2": 85,
    },
    {
      "x1": 111,
      "x2": 107,
      "y1": 20,
      "y2": 20,
    },
    {
      "x1": 112,
      "x2": 112,
      "y1": 19,
      "y2": 15,
    },
    {
      "x1": 153,
      "x2": 157,
      "y1": 20,
      "y2": 20,
    },
    {
      "x1": 152,
      "x2": 152,
      "y1": 19,
      "y2": 15,
    },
    {
      "x1": 153,
      "x2": 157,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 152,
      "x2": 152,
      "y1": 81,
      "y2": 85,
    },
    {
      "x1": 111,
      "x2": 107,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 112,
      "x2": 112,
      "y1": 81,
      "y2": 85,
    },
    {
      "x1": 19,
      "x2": 15,
      "y1": 100,
      "y2": 100,
    },
    {
      "x1": 20,
      "x2": 20,
      "y1": 99,
      "y2": 95,
    },
    {
      "x1": 81,
      "x2": 85,
      "y1": 100,
      "y2": 100,
    },
    {
      "x1": 80,
      "x2": 80,
      "y1": 99,
      "y2": 95,
    },
    {
      "x1": 81,
      "x2": 85,
      "y1": 140,
      "y2": 140,
    },
    {
      "x1": 80,
      "x2": 80,
      "y1": 141,
      "y2": 145,
    },
    {
      "x1": 19,
      "x2": 15,
      "y1": 140,
      "y2": 140,
    },
    {
      "x1": 20,
      "x2": 20,
      "y1": 141,
      "y2": 145,
    },
  ],
  "groups": [
    {
      "block": {
        "h": 60,
        "w": 132,
        "x": 20,
        "y": 20,
      },
      "imageId": "a",
    },
  ],
  "index": 0,
  "lines": [
    {
      "clip": {
        "h": 60,
        "w": 40,
        "x": 20,
        "y": 20,
      },
      "colour": "#e0457b",
      "opacity": 0.9,
      "strokes": [
        {
          "cmds": [
            {
              "op": "M",
              "x": 30,
              "y": 20,
            },
            {
              "op": "L",
              "x": 30,
              "y": 80,
            },
            {
              "op": "M",
              "x": 40,
              "y": 20,
            },
            {
              "op": "L",
              "x": 40,
              "y": 80,
            },
            {
              "op": "M",
              "x": 50,
              "y": 20,
            },
            {
              "op": "L",
              "x": 50,
              "y": 80,
            },
            {
              "op": "M",
              "x": 20,
              "y": 32,
            },
            {
              "op": "L",
              "x": 60,
              "y": 32,
            },
            {
              "op": "M",
              "x": 20,
              "y": 44,
            },
            {
              "op": "L",
              "x": 60,
              "y": 44,
            },
            {
              "op": "M",
              "x": 20,
              "y": 56,
            },
            {
              "op": "L",
              "x": 60,
              "y": 56,
            },
            {
              "op": "M",
              "x": 20,
              "y": 68,
            },
            {
              "op": "L",
              "x": 60,
              "y": 68,
            },
            {
              "op": "M",
              "x": 33.333333333333336,
              "y": 20,
            },
            {
              "op": "L",
              "x": 33.333333333333336,
              "y": 80,
            },
            {
              "op": "M",
              "x": 46.66666666666667,
              "y": 20,
            },
            {
              "op": "L",
              "x": 46.66666666666667,
              "y": 80,
            },
            {
              "op": "M",
              "x": 20,
              "y": 40,
            },
            {
              "op": "L",
              "x": 60,
              "y": 40,
            },
            {
              "op": "M",
              "x": 20,
              "y": 60,
            },
            {
              "op": "L",
              "x": 60,
              "y": 60,
            },
            {
              "op": "M",
              "x": 20,
              "y": 20,
            },
            {
              "op": "L",
              "x": 60,
              "y": 80,
            },
            {
              "op": "M",
              "x": 60,
              "y": 20,
            },
            {
              "op": "L",
              "x": 20,
              "y": 80,
            },
            {
              "op": "M",
              "x": 20,
              "y": 20,
            },
            {
              "op": "L",
              "x": 60,
              "y": 50,
            },
            {
              "op": "M",
              "x": 20,
              "y": 20,
            },
            {
              "op": "L",
              "x": 40,
              "y": 80,
            },
            {
              "op": "M",
              "x": 60,
              "y": 20,
            },
            {
              "op": "L",
              "x": 20,
              "y": 50,
            },
            {
              "op": "M",
              "x": 60,
              "y": 20,
            },
            {
              "op": "L",
              "x": 40,
              "y": 80,
            },
            {
              "op": "M",
              "x": 20,
              "y": 80,
            },
            {
              "op": "L",
              "x": 60,
              "y": 50,
            },
            {
              "op": "M",
              "x": 20,
              "y": 80,
            },
            {
              "op": "L",
              "x": 40,
              "y": 20,
            },
            {
              "op": "M",
              "x": 60,
              "y": 80,
            },
            {
              "op": "L",
              "x": 20,
              "y": 50,
            },
            {
              "op": "M",
              "x": 60,
              "y": 80,
            },
            {
              "op": "L",
              "x": 40,
              "y": 20,
            },
            {
              "op": "M",
              "x": 40,
              "y": 20,
            },
            {
              "op": "L",
              "x": 60,
              "y": 50,
            },
            {
              "op": "L",
              "x": 40,
              "y": 80,
            },
            {
              "op": "L",
              "x": 20,
              "y": 50,
            },
            {
              "op": "L",
              "x": 40,
              "y": 20,
            },
            {
              "op": "M",
              "x": 35.278640450004204,
              "y": 20,
            },
            {
              "op": "L",
              "x": 35.278640450004204,
              "y": 80,
            },
            {
              "op": "M",
              "x": 44.721359549995796,
              "y": 20,
            },
            {
              "op": "L",
              "x": 44.721359549995796,
              "y": 80,
            },
            {
              "op": "M",
              "x": 20,
              "y": 42.91796067500631,
            },
            {
              "op": "L",
              "x": 60,
              "y": 42.91796067500631,
            },
            {
              "op": "M",
              "x": 20,
              "y": 57.08203932499369,
            },
            {
              "op": "L",
              "x": 60,
              "y": 57.08203932499369,
            },
            {
              "op": "M",
              "x": 60,
              "y": 20,
            },
            {
              "op": "C",
              "x": 20,
              "x1": 37.908610006768264,
              "x2": 20,
              "y": 57.08203932499369,
              "y1": 20,
              "y2": 36.602194513173906,
            },
            {
              "op": "C",
              "x": 44.721359549995796,
              "x1": 20,
              "x2": 31.06812967544927,
              "y": 80,
              "y1": 69.73927950302152,
              "y2": 80,
            },
            {
              "op": "C",
              "x": 60,
              "x1": 53.15951966868101,
              "x2": 60,
              "y": 65.83592135001263,
              "y1": 80,
              "y2": 73.65852598380458,
            },
            {
              "op": "C",
              "x": 50.55728090000841,
              "x1": 60,
              "x2": 55.772350655869715,
              "y": 57.08203932499369,
              "y1": 61.00128580577676,
              "y2": 57.08203932499369,
            },
            {
              "op": "C",
              "x": 44.721359549995796,
              "x1": 47.334190537184504,
              "x2": 44.721359549995796,
              "y": 62.49223594996214,
              "y1": 57.08203932499369,
              "y2": 59.50426686040604,
            },
            {
              "op": "C",
              "x": 48.32815729997478,
              "x1": 44.721359549995796,
              "x2": 46.336177906937365,
              "y": 65.83592135001263,
              "y1": 64.3389024046419,
              "y2": 65.83592135001263,
            },
            {
              "op": "C",
              "x": 50.55728090000841,
              "x1": 49.55926826976127,
              "x2": 50.55728090000841,
              "y": 63.76941012509465,
              "y1": 65.83592135001263,
              "y2": 64.91071275997099,
            },
            {
              "op": "C",
              "x": 49.17960675006306,
              "x1": 50.55728090000841,
              "x2": 49.94047517331398,
              "y": 62.49223594996214,
              "y1": 63.06404630529125,
              "y2": 62.49223594996214,
            },
            {
              "op": "C",
              "x": 48.32815729997478,
              "x1": 48.709364203527485,
              "x2": 48.32815729997478,
              "y": 63.28157299974759,
              "y1": 62.49223594996214,
              "y2": 62.84563418467465,
            },
            {
              "op": "C",
              "x": 48.854381999831844,
              "x1": 48.32815729997478,
              "x2": 48.5637561231165,
              "y": 63.76941012509465,
              "y1": 63.55099800447807,
              "y2": 63.76941012509465,
            },
            {
              "op": "C",
              "x": 49.17960675006306,
              "x1": 49.03399866965208,
              "x2": 49.17960675006306,
              "y": 63.46791020065628,
              "y1": 63.76941012509465,
              "y2": 63.63442401099873,
            },
            {
              "op": "C",
              "x": 48.978606800437205,
              "x1": 49.17960675006306,
              "x2": 49.089616007332324,
              "y": 63.28157299974759,
              "y1": 63.36499900626824,
              "y2": 63.28157299974759,
            },
          ],
          "dashMm": [],
        },
        {
          "cmds": [
            {
              "op": "M",
              "x": 40,
              "y": 20,
            },
            {
              "op": "L",
              "x": 40,
              "y": 80,
            },
            {
              "op": "M",
              "x": 20,
              "y": 50,
            },
            {
              "op": "L",
              "x": 60,
              "y": 50,
            },
          ],
          "dashMm": [
            2.0999999999999996,
            1.4,
          ],
        },
      ],
      "tileIndex": 0,
      "types": [
        "grid",
        "thirds",
        "armature",
        "golden",
        "spiral",
        "centre",
      ],
      "widthMm": 0.35,
    },
  ],
  "safeArea": {
    "h": 287,
    "w": 200,
    "x": 5,
    "y": 5,
  },
  "size": {
    "h": 297,
    "w": 210,
  },
  "tiles": [
    {
      "bleedMm": 0,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 60,
        "w": 40,
        "x": 20,
        "y": 20,
      },
      "version": "original",
    },
    {
      "bleedMm": 0,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": {
        "blurPct": 40,
        "values": null,
      },
      "trim": {
        "h": 60,
        "w": 40,
        "x": 66,
        "y": 20,
      },
      "version": "blurred",
    },
    {
      "bleedMm": 0,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": {
        "blurPct": null,
        "values": {
          "count": 5,
          "hue": 55,
          "neutral": false,
        },
      },
      "trim": {
        "h": 60,
        "w": 40,
        "x": 112,
        "y": 20,
      },
      "version": "values",
    },
    {
      "bleedMm": 0,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "b",
      "lowDpi": false,
      "rotation": 0,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 40,
        "w": 60,
        "x": 20,
        "y": 100,
      },
      "version": "original",
    },
  ],
}
`;

exports[`study versions (M2-R4) > a 3-version turned group with bleed and crop marks > matches the snapshot 1`] = `
{
  "cropMarks": [
    {
      "x1": 9,
      "x2": 5,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 13,
      "x2": 13,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 57,
      "x2": 57,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 57,
      "x2": 57,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 9,
      "x2": 5,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 13,
      "x2": 13,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 63,
      "x2": 63,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 107,
      "x2": 107,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 107,
      "x2": 107,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 63,
      "x2": 63,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 113,
      "x2": 113,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 161,
      "x2": 165,
      "y1": 14,
      "y2": 14,
    },
    {
      "x1": 157,
      "x2": 157,
      "y1": 10,
      "y2": 6,
    },
    {
      "x1": 161,
      "x2": 165,
      "y1": 80,
      "y2": 80,
    },
    {
      "x1": 157,
      "x2": 157,
      "y1": 84,
      "y2": 88,
    },
    {
      "x1": 113,
      "x2": 113,
      "y1": 84,
      "y2": 88,
    },
  ],
  "groups": [
    {
      "block": {
        "h": 66,
        "w": 144,
        "x": 13,
        "y": 14,
      },
      "imageId": "a",
    },
  ],
  "index": 0,
  "lines": [],
  "safeArea": {
    "h": 287,
    "w": 200,
    "x": 5,
    "y": 5,
  },
  "size": {
    "h": 297,
    "w": 210,
  },
  "tiles": [
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 90,
      "scaledToFit": false,
      "study": null,
      "trim": {
        "h": 66,
        "w": 44,
        "x": 13,
        "y": 14,
      },
      "version": "original",
    },
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 90,
      "scaledToFit": false,
      "study": {
        "blurPct": 40,
        "values": null,
      },
      "trim": {
        "h": 66,
        "w": 44,
        "x": 63,
        "y": 14,
      },
      "version": "blurred",
    },
    {
      "bleedMm": 3,
      "crop": {
        "h": 2000,
        "w": 3000,
        "x": 0,
        "y": 0,
      },
      "flipH": false,
      "flipV": false,
      "imageId": "a",
      "lowDpi": false,
      "rotation": 90,
      "scaledToFit": false,
      "study": {
        "blurPct": null,
        "values": {
          "count": 5,
          "hue": 55,
          "neutral": false,
        },
      },
      "trim": {
        "h": 66,
        "w": 44,
        "x": 113,
        "y": 14,
      },
      "version": "values",
    },
  ],
}
`;
